--- a/chess/Form1.resx
+++ b/chess/Form1.resx
@@ -9486,7 +9486,7 @@
         AACAAQAA
 </value>
   </data>
-<<<<<<< Updated upstream
+ Updated upstream
   <metadata name="contextMenuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>693, 24</value>
   </metadata>
